# duplo-train-10427-ble2mqtt

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  HOMEASSISTANT.md  LICENSE  README.md  SECURITY.md  build.rs  renovate.json  zizmor.yml
.github/workflows/: ci.yml  release.yml  renovate.yml  security.yml
deploy/: README.md  duplo-train-controller.service
docs/: ARCHITECTURE.md  FAQ.md
examples/: dashboard.yml
scripts/: README.md  build-rpi4.sh
src/: ble.rs  config.rs  main.rs  mqtt.rs  protocol.rs  types.rs
src/protocol/: buffer.rs  commands.rs  messages.rs
tests/: mqtt_integration.rs
