[package]
name = "duplo-train-controller"
version = "0.3.0"
edition = "2024"
description = "BLE-to-MQTT bridge for LEGO DUPLO 10427 train"
license = "MIT"
authors = ["Michael Schroeder"]
repository = "https://github.com/micschr0/duplo-train-10427-ble2mqtt"
readme = "README.md"
rust-version = "1.88"
keywords = ["lego", "duplo", "ble", "mqtt", "home-assistant"]
categories = ["embedded", "hardware-support"]

[dependencies]
anyhow = "1"
btleplug = "0.11"
dotenvy = "0.15"
serde-env = "0.3"
rumqttc = { version = "0.25", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"

[dev-dependencies]
rstest = "0.23"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mosquitto"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
